Cycles ignores normal inputs when fed by nodes without inputs from other nodes #70615

Closed
opened 2019-10-07 19:32:35 +02:00 by Nathan Vasil · 5 comments

System Information
Nvidia 1070, Win10

Blender Version
Bug reproduced in 2.81 Alpha (2019-10-06 14:05, hash 54a9649e26), 2.80, 2.79b

Short description of error
Normal inputs on nodes are sometimes ignored, for example, when feeding a normal input a value from a combineXYZ or mixRGB node without inputs from other nodes.

Exact steps for others to reproduce the error

  • Open attached file
  • Go to the "Renderer" view mode
  • Test each of the 4 Normal configurations by connecting the "Normalize" node with the "Normal" input (and changing some settings as "Fac").
    Note that only normals with the "Geometry" node connected work
    combineXYZbug.blend
**System Information** Nvidia 1070, Win10 **Blender Version** Bug reproduced in 2.81 Alpha (2019-10-06 14:05, hash 54a9649e2636), 2.80, 2.79b **Short description of error** Normal inputs on nodes are sometimes ignored, for example, when feeding a normal input a value from a combineXYZ or mixRGB node without inputs from other nodes. **Exact steps for others to reproduce the error** - Open attached file - Go to the "Renderer" view mode - Test each of the 4 Normal configurations by connecting the "Normalize" node with the "Normal" input (and changing some settings as "Fac"). Note that only normals with the "Geometry" node connected work [combineXYZbug.blend](https://archive.blender.org/developer/F7795028/combineXYZbug.blend)
Author

Added subscriber: @vasiln

Added subscriber: @vasiln
Germano Cavalcante changed title from Normal inputs ignored when fed by nodes without inputs from other nodes to Cycles ignores normal inputs when fed by nodes without inputs from other nodes 2020-05-28 16:16:29 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by blender/cycles@a318daedcb

This issue was referenced by blender/cycles@a318daedcb94a121b5d1a7390335c6c691817d53

This issue was referenced by e7fc15e2ef

This issue was referenced by e7fc15e2ef222b90e24594cdffe85894ff007e09

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Kévin Dietrich self-assigned this 2021-06-29 16:25:06 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70615
No description provided.